# MLPipelineExperiments

./: .gitignore  LICENSE  pyproject.toml
docs/: links.md
pipeline_experiment_templates/1. Ingestion & Preprocessing/: steps.md
pipeline_experiment_templates/2. Data_Representation/: steps_data_rep.md
pipeline_experiment_templates/3. Feature_Extraction/: feature_extraction.md
pipeline_experiment_templates/4. Sentence Embedding/: sen_embed.md
pipeline_experiment_templates/5. Model_Selection/: model_selection.md
pipeline_experiment_templates/6. ML-LLM-Ops/: mlllmops.md
